Update GitHub Integration

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -11,16 +11,16 @@
   </div>
 </script>
 
-<script type="text/ng-template" id="confirmGitHubIntegrationSettings.html">
+<script type="text/ng-template" id="gitHubIntegrationSettings.html">
   <div class="modal-header">
-    <h3 class="modal-title">Confirm GitHub Integration Settings</h3>
+    <h3 class="modal-title">GitHub Integration Settings</h3>
   </div>
   <div class="modal-body">
      <form class="form-horizontal" name="editForm" novalidate>
          <div class="form-group" ng-class="{'has-error': editForm.gitHubUrlDomainConfigurationFile.$invalid && editForm.gitHubUrlDomainConfigurationFile.$dirty}">
                 <label for="gitHubUrlDomainConfigurationFile" class="col-sm-3 control-label">GitHub URL For Domain Configuration File *</label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control inline-block" ng-disabled="_loading" ng-model="model.github_integration.github_url" id="gitHubUrlDomainConfigurationFile" name="gitHubUrlDomainConfigurationFile" placeholder="Origin Server Name" ng-maxlength="300" required>
+                  <input type="text" class="form-control inline-block" ng-disabled="_loading" ng-model="newGitHubIntegrationSettings.github_url" id="gitHubUrlDomainConfigurationFile" name="gitHubUrlDomainConfigurationFile" placeholder="Origin Server Name" ng-maxlength="300" required>
                   <label for="gitHubUrlDomainConfigurationFile" class="text-info" popover-append-to-body="false" popover-placement="left"  popover-trigger="mouseenter" uib-popover="Provide here a GitHub URL pointing to a JSON file holding the domain’s configuration. The initial version of the configuration file can be taken from the ‘Advanced Mode’ window.">
                     <i class="fa fa-question-circle"></i>
                   </label>
@@ -32,7 +32,7 @@
         <div class="form-group" ng-class="{'has-error': editForm.gitHubPersonalAPIAccessToken.$invalid && editForm.gitHubPersonalAPIAccessToken.$dirty}">
                 <label for="gitHubPersonalAPIAccessToken" class="col-sm-3 control-label">GitHub Personal API Access Token *</label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control inline-block" ng-disabled="_loading" ng-model="model.github_integration.github_personal_api_key" id="gitHubPersonalAPIAccessToken" name="gitHubPersonalAPIAccessToken" placeholder="GitHub Personal API Access Token" ng-maxlength="40" required>
+                  <input type="text" class="form-control inline-block" ng-disabled="_loading" ng-model="newGitHubIntegrationSettings.github_personal_api_key" id="gitHubPersonalAPIAccessToken" name="gitHubPersonalAPIAccessToken" placeholder="GitHub Personal API Access Token" ng-maxlength="40" required>
                   <label for="gitHubPersonalAPIAccessToken" class="text-info" popover-append-to-body="false" popover-placement="left"  popover-trigger="mouseenter" uib-popover="Specify here GitHub Personal API Access Token generated via GitHub’s UI and granted with permissions to access the domain configuration file">
                     <i class="fa fa-question-circle"></i>
                   </label>
