Add UI validation GitHub Integration fields

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -197,9 +197,11 @@
   <script type="text/javascript" src="js/portal/shared/validators/validate-compare-to.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-cookies-options.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-domains-list.directive.js"></script>
+  <script type="text/javascript" src="js/portal/shared/validators/validate-github-personal-access-token.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-pattern-no-special-chars.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-pattern-comment-no-special-chars.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-query-strings-options.directive.js"></script>
+  <script type="text/javascript" src="js/portal/shared/validators/validate-url-json-file.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-uniqueness-in-array-notification-lists.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-uniqueness-in-array.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-waf-location-name.directive.js"></script>
