--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -46,3 +46,7 @@
 <div ng-message="acl-rule-header-name" class="alert-text alert-text--acl-rule-header-name">Incorrect header-name</div>
 <!-- message for validate-bot-protection-location-name  -->
 <div ng-message="bot-protection-location-name" class="alert-text alert-text--bot-protection-location-name">Incorrect Bot Protection Location name format</div>
+<!-- message for validate-github-personal-access-token  -->
+<div ng-message="github-personal-access-token" class="alert-text alert-text--github-personal-access-token">Incorrect GitHub Personal Access Token format</div>
+<!-- message for validate-url-json-file  -->
+<div ng-message="url-json-file" class="alert-text alert-text--url">Incorrect URL string format for load JSON file</div>
