Update ACL Rules tab Domain Config Page

--- a/code/dev/parts/domains/domain-acl-rules/domain-acl-rules-list.tpl.html
+++ b/code/dev/parts/domains/domain-acl-rules/domain-acl-rules-list.tpl.html
@@ -8,6 +8,6 @@
     <div class="panel-title"> End User Access Conditions:</div>
   </div>
   <div class="panel-body" ng-repeat="itemAcl in $ctrl.aclRulesList">
-    <domain-acl-rules-item ng-model="itemAcl" on-call-remove="$ctrl.onRemoveACLRule(index)"></domain-acl-rules-item>
+    <domain-acl-rules-item ng-model="itemAcl" on-call-remove="$ctrl.onRemoveACLRule(index)" is-edit-locked="_isEditLocked"></domain-acl-rules-item>
   </div>
 </div>
