--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -2,15 +2,15 @@
   <div class="form-group" ng-class="{'has-error': editForm.url_value.$invalid && editForm.url_value.$dirty}">
     <div class="col-md-offset-3  col-md-9">
       <label class="radio-inline">
-        <input id="regularExpression" type="radio" ng-model="$ctrl.rule.url.is_wildcard" ng-value="false">Regular Expression
+        <input id="regularExpression" type="radio" ng-model="$ctrl.rule.url.is_wildcard" ng-value="false" ng-disabled="_isEditLocked">Regular Expression
       </label>
       <label class="radio-inline">
-        <input id="wildcardPattern" type="radio" ng-model="$ctrl.rule.url.is_wildcard" ng-value="true">Wildcard Pattern
+        <input id="wildcardPattern" type="radio" ng-model="$ctrl.rule.url.is_wildcard" ng-value="true" ng-disabled="_isEditLocked">Wildcard Pattern
       </label>
     </div>
     <label class="col-md-3 control-label">URL *</label>
     <div class="col-md-9">
-      <input id="urlOfURLblock" type="text" validate-caching-rule-url name="url_value" class="form-control inline-block" ng-model="$ctrl.rule.url.value" required>
+      <input id="urlOfURLblock" type="text" validate-caching-rule-url name="url_value" class="form-control inline-block" ng-model="$ctrl.rule.url.value" ng-disabled="_isEditLocked" required>
       <label for="cache_url" class="text-info" popover-trigger="mouseenter" uib-popover="Specify here a regular expression or a wildcard pattern the caching rule should be applied to">
         <i class="fa fa-question-circle"></i>
       </label>
@@ -28,7 +28,7 @@
       Override Origin Caching Headers
     </label>
     <div class="col-md-9">
-      <toggle-switch id="overrideOriginCachingHeaders" ng-model="$ctrl.rule.edge_caching.override_origin" on-label="On" off-label="Off">
+      <toggle-switch id="overrideOriginCachingHeaders" ng-model="$ctrl.rule.edge_caching.override_origin" on-label="On" off-label="Off" is-disabled="_isEditLocked">
       </toggle-switch>
       <label for="override_origin" class="text-info" popover-trigger="mouseenter" uib-popover="If the option is enabled then the edge cache will NOT respect caching headers set by the origin server. Otherwise, the cache will parse and follow the content caching instructions set by the origin.">
         <i class="fa fa-question-circle"></i>
@@ -38,7 +38,7 @@
   <div class="form-group form-inline" ng-class="{'has-error': editForm.newTTL.$invalid && editForm.newTTL.$dirty}">
     <label for="newTTL" class="col-sm-3 control-label">Edge Cache TTL</label>
     <div class="col-md-9">
-      <input id="edgeCacheTTL" type="number" class="form-control inline-block" name="newTTL" ng-model="$ctrl.rule.edge_caching.new_ttl" min="0" max="10000000" ng-min="0" ng-max="10000000" required> second(s)
+      <input id="edgeCacheTTL" type="number" class="form-control inline-block" name="newTTL" ng-model="$ctrl.rule.edge_caching.new_ttl" min="0" max="10000000" ng-min="0" ng-max="10000000" ng-disabled="_isEditLocked" required> second(s)
       <label for="newTTL" class="text-info" popover-trigger="mouseenter" uib-popover="Defines how long a cached object will be consider fresh (range 0-10,000,000)">
         <i class="fa fa-question-circle"></i>
       </label>
@@ -52,7 +52,7 @@
       Enforce New Edge Cache TTL If Origin Caching Headers Are Missing
     </label>
     <div class="col-md-9">
-      <toggle-switch id="newEdgeTTLifOriginMissing" ng-model="$ctrl.rule.edge_caching.override_no_cc" on-label="On" off-label="Off">
+      <toggle-switch id="newEdgeTTLifOriginMissing" ng-model="$ctrl.rule.edge_caching.override_no_cc" on-label="On" off-label="Off" is-disabled="_isEditLocked">
       </toggle-switch>
       <label for="override_no_cc" class="text-info" popover-trigger="mouseenter" uib-popover="Instructs the edge cache to set new edge caching TTL if caching headers are missing in origin responses">
         <i class="fa fa-question-circle"></i>
@@ -62,7 +62,7 @@
   <div class="form-group ">
     <label class="col-sm-3 control-label">Keep Or Drop Query String Parameters</label>
     <div class="col-sm-9">
-      <toggle-switch id="keepOrDropQueryStringParameters" ng-model="$ctrl.rule.edge_caching.query_string_list_is_keep" on-label="Keep" off-label="Drop">
+      <toggle-switch id="keepOrDropQueryStringParameters" ng-model="$ctrl.rule.edge_caching.query_string_list_is_keep" on-label="Keep" off-label="Drop" is-disabled="_isEditLocked">
       </toggle-switch>
       <label for="query_string_list_is_keep" class="text-info" popover-trigger="mouseenter" uib-popover="Controls whether specified query string parameters will be kept or dropped in cached objects">
         <i class="fa fa-question-circle"></i>
@@ -72,7 +72,7 @@
   <div class="form-group" ng-class="{'has-error': editForm.queryStringKeepOrRemoveList.$invalid && editForm.queryStringKeepOrRemoveList.$dirty}">
     <label class="col-sm-3 control-label">Query String Parameters To Drop/Keep</label>
     <div class="col-sm-9">
-      <ui-select validate-query-strings-options tagging tagging-label="Add New Query String" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-disabled="_loading" ng-model="$ctrl.rule.edge_caching.query_string_keep_or_remove_list" id="query_str" name="queryStringKeepOrRemoveList">
+      <ui-select validate-query-strings-options tagging tagging-label="Add New Query String" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-disabled="_loading || _isEditLocked" ng-model="$ctrl.rule.edge_caching.query_string_keep_or_remove_list" id="query_str" name="queryStringKeepOrRemoveList">
         <ui-select-match placeholder="Add Query String...">{{$item}}</ui-select-match>
         <ui-select-choices repeat="query_str in $ctrl.rule.edge_caching.query_string_keep_or_remove_list">
           {{query_str}}
@@ -91,7 +91,7 @@
   <div class="form-group ">
     <label class="col-sm-3 control-label">Override HTTP Cookies</label>
     <div class="col-sm-9">
-      <toggle-switch class="overrideHTTPcookies" ng-model="$ctrl.rule.cookies.override" on-label="Yes" off-label="No">
+      <toggle-switch class="overrideHTTPcookies" ng-model="$ctrl.rule.cookies.override" on-label="Yes" off-label="No" is-disabled="_isEditLocked">
       </toggle-switch>
       <label for="override" class="text-info" popover-trigger="mouseenter" uib-popover="The switch controls whether the edge cache will manipulate HTTP cookies set in origin responses">
         <i class="fa fa-question-circle"></i>
@@ -102,7 +102,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Ignore All HTTP Cookies</label>
       <div class="col-sm-9">
-        <toggle-switch class="ignoreAllHTTPcookies" ng-model="$ctrl.rule.cookies.ignore_all" on-label="Yes" off-label="No">
+        <toggle-switch class="ignoreAllHTTPcookies" ng-model="$ctrl.rule.cookies.ignore_all" on-label="Yes" off-label="No" is-disabled="_isEditLocked">
         </toggle-switch>
         <label for="ignore_all" class="text-info" popover-trigger="mouseenter" uib-popover="If the switch is enabled, the edge cache will ignore all HTTP cookies while making caching decisions (this affects the caching ratio)">
           <i class="fa fa-question-circle"></i>
@@ -112,7 +112,7 @@
     <div class="form-group" ng-if="$ctrl.rule.cookies.ignore_all == false">
       <label class="col-sm-3 control-label">Keep or Drop Specific HTTP Cookies</label>
       <div class="col-sm-9">
-        <toggle-switch id="keepOrDropSpecificHTTPcookies" ng-model="$ctrl.rule.cookies.list_is_keep" on-label="Keep" off-label="Drop">
+        <toggle-switch id="keepOrDropSpecificHTTPcookies" ng-model="$ctrl.rule.cookies.list_is_keep" on-label="Keep" off-label="Drop" is-disabled="_isEditLocked">
         </toggle-switch>
         <label for="list_is_keep" class="text-info" popover-trigger="mouseenter" uib-popover="This switch controls whether specified HTTP cookies will be kept or dropped in cached objects">
           <i class="fa fa-question-circle"></i>
@@ -123,7 +123,7 @@
       <label class="col-sm-3 control-label" ng-if="$ctrl.rule.cookies.list_is_keep == true">List Of Cookies To Keep</label>
       <label class="col-sm-3 control-label" ng-if="$ctrl.rule.cookies.list_is_keep == false">List Of Cookies To Drop</label>
       <div class="col-sm-9">
-        <ui-select validate-cookies-options tagging tagging-label="Add New Cookie String" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block listOfCookiesToDrop" ng-disabled="_loading" ng-model="$ctrl.rule.cookies.keep_or_ignore_list" id="keep_or_ignore_list_str" name="keepOrIgnoreList">
+        <ui-select validate-cookies-options tagging tagging-label="Add New Cookie String" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block listOfCookiesToDrop" ng-disabled="_loading || _isEditLocked" ng-model="$ctrl.rule.cookies.keep_or_ignore_list" id="keep_or_ignore_list_str" name="keepOrIgnoreList">
           <ui-select-match placeholder="Add Cookies String...">{{$item}}</ui-select-match>
           <ui-select-choices repeat="keep_or_ignore_list_str in $ctrl.rule.cookies.keep_or_ignore_list">
             {{keep_or_ignore_list_str}}
@@ -142,7 +142,7 @@
       <label class="col-sm-3 control-label" ng-if="$ctrl.rule.cookies.ignore_all == false" ng-switch="$ctrl.rule.cookies.list_is_keep">
         Remove <span ng-switch-when="false">Ignored</span><span ng-switch-when="true">Kept</span> Cookies From Origin Requests</label>
       <div class="col-sm-9">
-        <toggle-switch id="removeIgnoredCookiesFromOriginRequests" ng-model="$ctrl.rule.cookies.remove_ignored_from_request" on-label="Yes" off-label="No">
+        <toggle-switch id="removeIgnoredCookiesFromOriginRequests" ng-model="$ctrl.rule.cookies.remove_ignored_from_request" on-label="Yes" off-label="No" is-disabled="_isEditLocked">
         </toggle-switch>
         <label for="remove_ignored_from_request" class="text-info" popover-trigger="mouseenter" uib-popover="The switch instructs the edge cache whether it should keep/ignore specified HTTP cookies in origin requests">
           <i class="fa fa-question-circle"></i>
@@ -154,7 +154,7 @@
       <label class="col-sm-3 control-label" ng-if="$ctrl.rule.cookies.ignore_all == false" ng-switch="$ctrl.rule.cookies.list_is_keep">
         Remove <span ng-switch-when="false">Ignored</span><span ng-switch-when="true">Kept</span> Cookies From Edge Responses</label>
       <div class="col-sm-9">
-        <toggle-switch id="removeIgnoredCookiesFromEdgeResponses" ng-model="$ctrl.rule.cookies.remove_ignored_from_response" on-label="Yes" off-label="No">
+        <toggle-switch id="removeIgnoredCookiesFromEdgeResponses" ng-model="$ctrl.rule.cookies.remove_ignored_from_response" on-label="Yes" off-label="No" is-disabled="_isEditLocked">
         </toggle-switch>
         <label for="remove_ignored_from_response" class="text-info" popover-trigger="mouseenter" uib-popover="The switch instructs the edge cache whether it should keep/ignore specified HTTP cookies in edge responses">
           <i class="fa fa-question-circle"></i>
@@ -173,7 +173,7 @@
       Override Edge Caching
     </label>
     <div class="col-md-9">
-      <toggle-switch class="overrideEdgeCaching" ng-model="$ctrl.rule.browser_caching.override_edge" on-label="On" off-label="Off">
+      <toggle-switch class="overrideEdgeCaching" ng-model="$ctrl.rule.browser_caching.override_edge" on-label="On" off-label="Off" is-disabled="_isEditLocked">
       </toggle-switch>
        <label for="override_edge" class="text-info" popover-trigger="mouseenter" uib-popover="If OFF, the edge cache will pass to the browser HTTP caching headers set by the origin. If ON, the edge cache will set browser caching headers as configured below.">
           <i class="fa fa-question-circle"></i>
@@ -183,7 +183,7 @@
   <div class="form-group form-inline" ng-class="{'has-error': editForm.browserCachingNewTTL.$invalid && editForm.browserCachingNewTTL.$dirty}" ng-show="$ctrl.rule.browser_caching.override_edge">
     <label for="browserCachingNewTTL" class="col-sm-3 control-label">Browser Caching TTL</label>
     <div class="col-md-9">
-      <input id="browserCachingTTL" type="number" class="form-control inline-block" name="browserCachingNewTTL" ng-model="$ctrl.rule.browser_caching.new_ttl" ng-min="0" ng-max="10000000" required> second(s)
+      <input id="browserCachingTTL" type="number" class="form-control inline-block" name="browserCachingNewTTL" ng-model="$ctrl.rule.browser_caching.new_ttl" ng-min="0" ng-max="10000000" ng-disabled="_isEditLocked" required> second(s)
       <label for="browserCachingNewTTL" class="text-info" popover-trigger="mouseenter" uib-popover="Defines for how long objects will be cached in the browser cache (range 0-10,000,000 seconds)">
         <i class="fa fa-question-circle"></i>
       </label>
@@ -195,7 +195,7 @@
   <div class="form-group form-inline">
     <label for="override_origin" class="col-sm-3 control-label">Force Revalidation</label>
     <div class="col-md-9">
-      <toggle-switch id="forceRevalidation" ng-model="$ctrl.rule.browser_caching.force_revalidate" on-label="On" off-label="Off">
+      <toggle-switch id="forceRevalidation" ng-model="$ctrl.rule.browser_caching.force_revalidate" on-label="On" off-label="Off" is-disabled="_isEditLocked">
       </toggle-switch>
        <label for="force_revalidate" class="text-info" popover-trigger="mouseenter" uib-popover="Instructs the browser that a stale cache item in the browser cache can not be used without revalidation with the edge cache first">
           <i class="fa fa-question-circle"></i>
@@ -212,7 +212,7 @@
       Enable The Serving of Stale Content
     </label>
     <div class="col-md-9">
-      <toggle-switch class="enableTheServingOfStaleContent" ng-model="$ctrl.rule.serve_stale.enable" on-label="On" off-label="Off">
+      <toggle-switch class="enableTheServingOfStaleContent" ng-model="$ctrl.rule.serve_stale.enable" on-label="On" off-label="Off" is-disabled="_isEditLocked">
       </toggle-switch>
       <label for="override_origin" class="text-info" popover-trigger="mouseenter" uib-popover="Define whether the edge proxy will serve end users with expired objects in case of origin slowness or downtime">
         <i class="fa fa-question-circle"></i>
@@ -222,7 +222,7 @@
   <div class="form-group form-inline" ng-class="{'has-error': editForm.serveStaleWhileFetchingTTL.$invalid && editForm.serveStaleWhileFetchingTTL.$dirty}" ng-if="$ctrl.rule.serve_stale.enable">
     <label class="col-sm-3 control-label">Stale Object TTL While Fetching New Object</label>
     <div class="col-md-9">
-      <input type="number" class="form-control inline-block staleObjectTTLwhileFetchingNewObject" name="serveStaleWhileFetchingTTL" ng-model="$ctrl.rule.serve_stale.while_fetching_ttl" ng-min="0" ng-max="10000000" required> second(s)
+      <input type="number" class="form-control inline-block staleObjectTTLwhileFetchingNewObject" name="serveStaleWhileFetchingTTL" ng-model="$ctrl.rule.serve_stale.while_fetching_ttl" ng-min="0" ng-max="10000000" ng-disabled="_isEditLocked" required> second(s)
       <label class="text-info" popover-trigger="mouseenter" uib-popover="Sets the time period in seconds when stale objects are still served to end users while fetching new objects from the origin server (range 0-10,000,000)">
         <i class="fa fa-question-circle"></i>
       </label>
@@ -234,7 +234,7 @@
   <div class="form-group form-inline" ng-class="{'has-error': editForm.serveStaleOriginSickTTL.$invalid && editForm.serveStaleOriginSickTTL.$dirty}" ng-if="$ctrl.rule.serve_stale.enable">
     <label class="col-sm-3 control-label">Stale Object TTL When Origin Is Down</label>
     <div class="col-md-9">
-      <input type="number" class="staleObjectTTLwhenOriginIsDown form-control inline-block" name="serveStaleOriginSickTTL" ng-model="$ctrl.rule.serve_stale.origin_sick_ttl" ng-min="0" ng-max="10000000" required> second(s)
+      <input type="number" class="staleObjectTTLwhenOriginIsDown form-control inline-block" name="serveStaleOriginSickTTL" ng-model="$ctrl.rule.serve_stale.origin_sick_ttl" ng-min="0" ng-max="10000000" ng-disabled="_isEditLocked" required> second(s)
       <label class="text-info" popover-trigger="mouseenter" uib-popover="Sets the time period in seconds when stale objects are still served to end users if origin server is down as detected by the origin health monitoring probe (range 0-10,000,000)">
         <i class="fa fa-question-circle"></i>
       </label>
@@ -253,7 +253,7 @@
       Enable ESI
     </label>
     <div class="col-md-9">
-      <toggle-switch id="enableESI" ng-model="$ctrl.rule.enable_esi" on-label="On" off-label="Off">
+      <toggle-switch id="enableESI" ng-model="$ctrl.rule.enable_esi" on-label="On" off-label="Off" is-disabled="_isEditLocked">
       </toggle-switch>
       <label for="override_origin" class="text-info" popover-trigger="mouseenter" uib-popover="Use the switch to control whether the edge proxy will process Edge Side Includes (ESI) commands in served web objects">
         <i class="fa fa-question-circle"></i>
@@ -265,13 +265,13 @@
     <label class="col-sm-3">Manage Origin Request Headers</label>
   </div>
   <div class="form-group">
-    <origin-request-headers id="manageOriginRequestHeaders" class="col-sm-12" ng-model="$ctrl.rule.origin_request_headers"></origin-request-headers>
+    <origin-request-headers id="manageOriginRequestHeaders" is-edit-locked="_isEditLocked" class="col-sm-12" ng-model="$ctrl.rule.origin_request_headers"></origin-request-headers>
   </div>
   <hr>
   <div class="form-group">
     <label class="col-sm-3">Manage End User Response Headers</label>
   </div>
   <div class="form-group">
-    <end-user-response-headers id="manageEndUserResponseHeaders" class="col-sm-12" ng-model="$ctrl.rule.end_user_response_headers "></end-user-response-headers>
+    <end-user-response-headers id="manageEndUserResponseHeaders" is-edit-locked="_isEditLocked" class="col-sm-12" ng-model="$ctrl.rule.end_user_response_headers "></end-user-response-headers>
   </div>
 </div>
