--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -526,7 +526,7 @@
                         </div>
                       </div>
                     </div>
-                    <domain-caching-rule class="panel-body" ng-model="caching_rule" ng-show="!caching_rule.$$cachingRuleState.isCollapsed"></domain-caching-rule>
+                    <domain-caching-rule class="panel-body" ng-model="caching_rule" ng-show="!caching_rule.$$cachingRuleState.isCollapsed" is-edit-locked="_isEditLocked"></domain-caching-rule>
                   </div>
                 </div>
               </div>
