--- a/code/dev/parts/domains/domain-waf-rules/domain-waf-rules.tpl.html
+++ b/code/dev/parts/domains/domain-waf-rules/domain-waf-rules.tpl.html
@@ -43,7 +43,7 @@
             </a>
           </td>
           <td>
-            <toggle-switch class="is-checked--toggle-switch" name="isChecked" ng-model="item.isChecked" on-label="On" off-label="Off">
+            <toggle-switch class="is-checked--toggle-switch" name="isChecked" ng-model="item.isChecked" on-label="On" off-label="Off" is-disabled="_isEditLocked">
             </toggle-switch>
           </td>
         </tr>
